# devops-study-app

./: .gitignore  .pre-commit-config.yaml  .release-please-manifest.json  mise.toml  release-please-config.json
.github/workflows/: backend-tests.yaml  docker-build-push.yaml  frontend_tests.yaml  update-gitops.yaml
kubernetes/: pyproject.toml  setup_cluster_gitops  setup_gitops
src/backend/: CHANGELOG.md  Dockerfile  pyproject.toml
src/backend/src/backend/: main.py
src/backend/src/data/: sessions.csv
src/frontend/: CHANGELOG.md  Dockerfile  pyproject.toml
src/frontend/src/frontend/: main.py
